fix margin top of heading border

--- a/index.html
+++ b/index.html
@@ -316,6 +316,40 @@
                 </div>
               </div>
             </div>
+
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
